--- a/src/main/webapp/assets/css/index.css
+++ b/src/main/webapp/assets/css/index.css
@@ -1,7 +1,7 @@
 /* Product Listing Section */
 #tab-content {
   margin: 0 2rem 2rem 2rem;
-  background-color: #ba7967;
+  background-color: #FF98A1;
 }
 /* Mobile */
 .product-listings-container {
@@ -66,18 +66,24 @@
   font-size: 16px;
 }
 
+#featured-listing {
+  background-color: #FFE6A6;
+}
+
 #filter-buttons {
   overflow: hidden;
-  background-color: #5e6f64;
+  background-color: #2F586F ;
   margin: 0 2rem;
 }
 
 #filter-buttons button:hover {
-  background-color: #3f4441;
+  background-color: #26485B;
 }
 
 #filter-buttons button.active {
-  background-color: #ba7967;
+  background-color: #FF98A1;
+  color: #2F586F;
+  font-weight: bold;
 }
 
 .map-btn {
